[tool.poetry]
name = "tetris"
version = "1.0.0"
description = "A tetris game"
authors = ["ChrisCh7"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
